--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,14 @@ android {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.13'
+     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
     // firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
@@ -45,4 +46,17 @@ android {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'com.google.android.material:material:1.1.0'
+
+     // Splash screen
+     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
+
+
+
+
+     // profile users
+
+
+     implementation 'com.android.support:design:28.0.0'
+
+
 }
